<resources>
    <!-- Bottom Navigation -->
    <string name="app_name">SharpShooter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Current Game</string>
    <string name="title_account">Account</string>

    <!-- Home Fragment -->
    <string name="app_logo_description">SharpShooter App Logo</string>
    <string name="home_newGame">New Game</string>
    <string name="home_activeGame">Active Game</string>
    <string name="home_lastGames">Last Games</string>

    <!-- New Game -->
    <string name="newGame_newParkour">New Parkour</string>
    <string name="newGame_loadParkour">Load Parkour</string>

    <!-- New Parkour Dialog -->
    <string name="newParkour_name">Game Name</string>
    <string name="newParkour_name_hint">Game Name</string>
    <string name="newParkour_playerCount">Players</string>
    <string name="newParkour_playerCountCustom">+</string>
    <string name="newParkour_targetCount">Targets</string>
    <string name="newParkour_continue">Continue</string>
    <string name="newParkour_start">Start</string>
    <string name="newPlayer_name">Name</string>
    <string name="newPlayer_name_hint">Insert name…</string>
    <string name="newParkour_add_image">Add image</string>

    <!-- Current Game -->
    <string name="current_game_leaderboard">Leaderboard</string>
    <string name="current_game_player_stats">Statistics</string>
    <string name="current_game_end_parkour">End parkour</string>
    <string name="current_game_save_config">Save config</string>
    <string name="current_game_points_20">20</string>
    <string name="current_game_points_16">16</string>
    <string name="current_game_points_14">14</string>
    <string name="current_game_points_10">10</string>
    <string name="current_game_points_8">8</string>
    <string name="current_game_points_4">4</string>
    <string name="current_game_points_0">0</string>
    <string name="current_game_brokenArrow">Broken arrow</string>

    <!-- Played Game -->
    <string name="played_game_close">Close</string>

    <!-- Player Statistics -->
    <string name="player_stat_games">Games</string>
    <string name="player_stat_points">Points</string>
    <string name="player_stat_shots">Shots</string>
    <string name="player_stat_kills">Kills</string>
    <string name="player_stat_hits">Hits</string>
    <string name="player_stat_misses">Misses</string>
    <string name="player_stat_killRate">Kill Ratio</string>
    <string name="player_stat_broken">Broken</string>
    <string name="player_stat_done">Close</string>
    <string name="player_stat_killRate_placeholder" formatted="false">%3.2f %%</string>

    <!-- Account -->
    <string name="account_statistics">Statistics</string>
    <string name="account_last_games">Played games</string>
    <string name="account_saved_parkours">Saved parkours</string>
    <string name="account_logout">Log Out</string>

    <!-- Welcome / Login / Register -->
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Register</string>
    <string name="register_username">Username</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="repeat_password_text">Repeat Password</string>

    <string name="login_failed_auth_wrong_password">Password incorrect</string>
    <string name="login_failed_auth_email_invalid">Email invalid</string>

    <string name="register_failed_auth_password_length">Password too short</string>
    <string name="register_failed_auth_password_missmatch">Passwords do not match</string>
    <string name="register_failed_auth_email_used">Email already used</string>
    <string name="register_failed_auth_unknown_error">Unknown error</string>

    <!-- Help -->
    <string name="help_button">\?</string>
    <string name="help_title">Help</string>
    <string name="help_dummyParkourName">Parkour #1</string>
    <string name="help_dummyPlayerCount">3</string>
    <string name="help_playerCountDescription">Player count</string>
    <string name="help_dummyTargetCount">13</string>
    <string name="help_targetCountDescription">Target count</string>

    <!-- Help Points -->
    <string name="help_points_dummy_name">Player Name</string>
    <string name="help_points_slide">Move to the next target by sliding to the left</string>
    <string name="help_points_markPoints">Mark your score of current target here</string>
    <string name="help_points_markBroken">Mark your broken / lost arrows here</string>
    <string name="help_points_score">Your current score</string>
    <string name="help_points_pointTable">Point Table</string>
    <string name="help_points_hit">Hit</string>
    <string name="help_points_kill">Kill</string>
    <string name="help_points_firstArrow">1st Arrow</string>
    <string name="help_points_secondArrow">2nd Arrow</string>
    <string name="help_points_thirdArrow">3rd Arrow</string>
    <string name="help_points_markerLine">Line</string>

    <!-- Help Leaderboard -->
    <string name="help_leaderboard_helpText1">This slide shows all players ranked by their scores</string>
    <string name="help_leaderboard_helpText2">Depending on the scores the black bars fill up</string>
    <string name="help_leaderboard_helpText3">A full black bar means the highest possible score of this parkour is reached</string>
    <string name="help_leaderboard_player1">Player 1 - Winner</string>
    <string name="help_leaderboard_player2">Player 2</string>
    <string name="help_leaderboard_points1">75</string>
    <string name="help_leaderboard_points2">54</string>

    <!-- Help Statistics -->
    <string name="help_statistics_helpText1">On this slide all players are listed</string>
    <string name="help_statistics_helpText2">By clicking on a player a new window with detailed statistics will open</string>
    <string name="help_statistics_helpText3">This button saves the parkour as an template</string>
    <string name="help_statistics_helpText4">Saved parkours are visible on the account page</string>
    <string name="help_statistics_helpText5">Templates can be used to easily start a new game with the same settings</string>
    <string name="help_statistics_player">Player</string>

    <!-- Help Played Games -->
    <string name="help_playedGames_helpText1">This window shows all played games</string>
    <string name="help_playedGames_helpText2">Games can be viewed by clicking on them</string>
    <string name="help_playedGames_helpText3">By swiping a game to the left it will be deleted from the account</string>

    <!-- Help Saved Games -->
    <string name="help_savedGames_helpText1">This window shows all saved parkours</string>
    <string name="help_savedGames_helpText2">Saved parkours can be used to start a new game with the same parkour settings</string>
    <string name="help_savedGames_helpText3">Saved settings can be loaded by clicking on a parkour</string>
    <string name="help_savedGames_helpText4">By swiping a parkour to the left it will be deleted from the account</string>

</resources>