<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/helpText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_statistics_helpText1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_open_player_stats"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:text="@string/help_statistics_player"
                android:textColor="@color/button_selector"
                android:textSize="24sp"
                app:backgroundTint="@color/black" />

            <TextView
                android:id="@+id/helpText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_statistics_helpText2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_statistics_helpText3"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_saveConfig"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/current_game_save_config"
                android:textColor="@color/button_selector"
                android:textSize="24sp"
                app:backgroundTint="@color/black" />

            <TextView
                android:id="@+id/helpText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_statistics_helpText4"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_statistics_helpText5"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/help_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_done"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/player_stat_done"
        android:textColor="@color/button_selector"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>