<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/helpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_playedGames_helpText1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dummyGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_selector"
                android:clickable="true">

                <!--Text View to display LastGame Name-->

                <TextView
                    android:id="@+id/idLastGameName"
                    android:layout_width="163dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/julius_sans_one"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/help_dummyParkourName"
                    android:textColor="@color/button_selector"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/idLastGameDate"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/julius_sans_one"
                    android:textColor="@color/button_selector"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintEnd_toStartOf="@+id/idLastGameImage"
                    app:layout_constraintStart_toEndOf="@+id/idLastGameName"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/idLastGameImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_design_normal"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/roundedImageView"
                    tools:srcCompat="@drawable/ic_no_image" />

                <TextView
                    android:id="@+id/idLastGamePlayerCount"
                    android:layout_width="25dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/julius_sans_one"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:text="@string/help_dummyPlayerCount"
                    android:textAlignment="textEnd"
                    android:textColor="@color/button_selector"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <ImageView
                    android:id="@+id/idLastGamePlayerIcon"
                    android:layout_width="25dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/ic_baseline_person_24"
                    android:backgroundTint="@color/button_selector"
                    android:contentDescription="@string/help_playerCountDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/idLastGamePlayerCount" />

                <TextView
                    android:id="@+id/idLastGameTargetCount"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/julius_sans_one"
                    android:gravity="end"
                    android:text="@string/help_dummyTargetCount"
                    android:textAlignment="textEnd"
                    android:textColor="@color/button_selector"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/idLastGamePlayerIcon" />

                <ImageView
                    android:id="@+id/idLastGameTargetIcon"
                    android:layout_width="25dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/ic_baseline_adjust_24"
                    android:backgroundTint="@color/button_selector"
                    android:contentDescription="@string/help_targetCountDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/idLastGameTargetCount" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/helpText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_playedGames_helpText2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center_horizontal"
                android:text="@string/help_playedGames_helpText3"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/help_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_done"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/player_stat_done"
        android:textColor="@color/button_selector"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>