<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="_"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/statsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/points_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_points"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/shots_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_shots"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/shots"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/kills_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_kills"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/kills"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hits_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_hits"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hits"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/misses_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_misses"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/misses"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/killRate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_killRate"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/killRate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/broken_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/julius_sans_one"
                android:text="@string/player_stat_broken"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/broken"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:fontFamily="@font/julius_sans_one"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_done"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/player_stat_done"
        android:textColor="@color/button_selector"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>